--- a/bs2.html
+++ b/bs2.html
@@ -11,7 +11,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #DEF3FE;">
       <a class="navbar-brand" href="#">
-        <img src="https://media.discordapp.net/attachments/1161010996240994424/1355854063677214922/buildlogo_1.png?ex=683c2dff&is=683adc7f&hm=951e4481c4d84835c79a552b0c6a1ee2f1feb40acb73fad535ba5316228c6c6d&=&format=webp&quality=lossless&width=1244&height=563" alt="img" width="90">
+        <img src="buildlogo_1.webp" alt="img" width="90">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
