--- a/bs3.html
+++ b/bs3.html
@@ -16,13 +16,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="https://media.discordapp.net/attachments/1161010996240994424/1355854566700224552/carousel.webp?ex=683c2e77&is=683adcf7&hm=9818a57835220f13d7b68e25e6e0e893ee3f81657b1ef66d6045aac776e98cdd&=&format=webp&width=1692&height=554" alt="First slide">
+            <img class="d-block w-100" src="carousel1.webp" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="https://media.discordapp.net/attachments/1161010996240994424/1355854567652327646/carousel2_1.webp?ex=683c2e77&is=683adcf7&hm=4e4907c63e203200f28432608741b6eac4f04b5d96a38870d2f7afdd178405c6&=&format=webp&width=1692&height=377" alt="Second slide">
+            <img class="d-block w-100" src="carousel2_1.webp" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="https://media.discordapp.net/attachments/1161010996240994424/1355854566700224552/carousel.webp?ex=683c2e77&is=683adcf7&hm=9818a57835220f13d7b68e25e6e0e893ee3f81657b1ef66d6045aac776e98cdd&=&format=webp&width=1692&height=554" alt="Third slide">
+            <img class="d-block w-100" src="carousel1.webp" alt="Third slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
