--- a/bs5.html
+++ b/bs5.html
@@ -14,7 +14,7 @@
         <div class="container"><div class="row row-cols-1 row-cols-md-3 g-4" >
         <div class="col  col-12 col-md-4 ">
           <div class="card h-100 ">
-            <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSy6qrh2acxc_wK2jBNUgkW4cCbw6Hk9OKWxFmoZAecBmTJ86Y6" class="card-img-top" alt="...">
+            <img src="elon.jpg" class="card-img-top" alt="...">
             <div class="card-body ">
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
@@ -23,7 +23,7 @@
         </div>
         <div class="col col-12 col-md-4">
           <div class="card h-100">
-            <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSy6qrh2acxc_wK2jBNUgkW4cCbw6Hk9OKWxFmoZAecBmTJ86Y6" class="card-img-top" alt="...">
+            <img src="elon.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
@@ -32,7 +32,7 @@
         </div>
         <div class="col col-12 col-md-4">
           <div class="card h-100">
-            <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSy6qrh2acxc_wK2jBNUgkW4cCbw6Hk9OKWxFmoZAecBmTJ86Y6" class="card-img-top" alt="...">
+            <img src="elon.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. </p>
             </div>
@@ -42,7 +42,7 @@
       <div class="container"><div class="row row-cols-1 row-cols-md-3 g-4" style="margin-top: 10px;">
         <div class="col col-12 col-md-4">
           <div class="card h-100">
-            <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSy6qrh2acxc_wK2jBNUgkW4cCbw6Hk9OKWxFmoZAecBmTJ86Y6" class="card-img-top" alt="...">
+            <img src="elon.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
@@ -51,7 +51,7 @@
         </div>
         <div class="col col-12 col-md-4">
           <div class="card h-100">
-            <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSy6qrh2acxc_wK2jBNUgkW4cCbw6Hk9OKWxFmoZAecBmTJ86Y6" class="card-img-top" alt="...">
+            <img src="elon.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
@@ -60,7 +60,7 @@
         </div>
         <div class="col col-12 col-md-4 ">
           <div class="card h-100">
-            <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSy6qrh2acxc_wK2jBNUgkW4cCbw6Hk9OKWxFmoZAecBmTJ86Y6" class="card-img-top" alt="...">
+            <img src="elon.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. </p>
             </div>
