--- a/bs6.html
+++ b/bs6.html
@@ -27,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #DEF3FE;">
     <a class="navbar-brand" href="#">
-      <img src="https://media.discordapp.net/attachments/1161010996240994424/1355854063677214922/buildlogo_1.png?ex=683c2dff&is=683adc7f&hm=951e4481c4d84835c79a552b0c6a1ee2f1feb40acb73fad535ba5316228c6c6d&=&format=webp&quality=lossless&width=1244&height=563" width="90" alt="Logo" />
+      <img src="buildlogo_1.webp" width="90" alt="Logo" />
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -49,13 +49,13 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="https://media.discordapp.net/attachments/1161010996240994424/1355854566700224552/carousel.webp?ex=683c2e77&is=683adcf7&hm=9818a57835220f13d7b68e25e6e0e893ee3f81657b1ef66d6045aac776e98cdd&=&format=webp&width=1692&height=554" alt="First slide" />
+        <img class="d-block w-100" src="carousel1.webp" alt="First slide" />
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://media.discordapp.net/attachments/1161010996240994424/1355854567652327646/carousel2_1.webp?ex=683c2e77&is=683adcf7&hm=4e4907c63e203200f28432608741b6eac4f04b5d96a38870d2f7afdd178405c6&=&format=webp&width=1692&height=377" alt="Second slide" />
+        <img class="d-block w-100" src="carousel2_1.webp" alt="Second slide" />
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://media.discordapp.net/attachments/1161010996240994424/1355854566700224552/carousel.webp?ex=683c2e77&is=683adcf7&hm=9818a57835220f13d7b68e25e6e0e893ee3f81657b1ef66d6045aac776e98cdd&=&format=webp&width=1692&height=554" alt="Third slide" />
+        <img class="d-block w-100" src="carousel1.webp" alt="Third slide" />
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -117,7 +117,7 @@
         <div class="container"><div class="row row-cols-1 row-cols-md-3 g-4" >
         <div class="col  col-12 col-md-4 ">
           <div class="card h-100 ">
-            <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSy6qrh2acxc_wK2jBNUgkW4cCbw6Hk9OKWxFmoZAecBmTJ86Y6" class="card-img-top" alt="...">
+            <img src="elon.jpg" class="card-img-top" alt="...">
             <div class="card-body ">
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
@@ -126,7 +126,7 @@
         </div>
         <div class="col col-12 col-md-4">
           <div class="card h-100">
-            <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSy6qrh2acxc_wK2jBNUgkW4cCbw6Hk9OKWxFmoZAecBmTJ86Y6" class="card-img-top" alt="...">
+            <img src="elon.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
@@ -135,7 +135,7 @@
         </div>
         <div class="col col-12 col-md-4">
           <div class="card h-100">
-            <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSy6qrh2acxc_wK2jBNUgkW4cCbw6Hk9OKWxFmoZAecBmTJ86Y6" class="card-img-top" alt="...">
+            <img src="elon.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. </p>
             </div>
@@ -145,7 +145,7 @@
       <div class="container"><div class="row row-cols-1 row-cols-md-3 g-4" style="margin-top: 10px;">
         <div class="col col-12 col-md-4">
           <div class="card h-100">
-            <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSy6qrh2acxc_wK2jBNUgkW4cCbw6Hk9OKWxFmoZAecBmTJ86Y6" class="card-img-top" alt="...">
+            <img src="elon.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
@@ -154,7 +154,7 @@
         </div>
         <div class="col col-12 col-md-4">
           <div class="card h-100">
-            <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSy6qrh2acxc_wK2jBNUgkW4cCbw6Hk9OKWxFmoZAecBmTJ86Y6" class="card-img-top" alt="...">
+            <img src="elon.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
@@ -163,7 +163,7 @@
         </div>
         <div class="col col-12 col-md-4 ">
           <div class="card h-100">
-            <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSy6qrh2acxc_wK2jBNUgkW4cCbw6Hk9OKWxFmoZAecBmTJ86Y6" class="card-img-top" alt="...">
+            <img src="elon.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. </p>
             </div>
@@ -172,7 +172,7 @@
       </div></div>
     </div>
         <div style="background-color: #DEF3FE; display: flex; justify-content: center; align-items: center;">
-            <img src="https://media.discordapp.net/attachments/1161010996240994424/1355857075053269257/footer_1.png?ex=683c30cd&is=683adf4d&hm=d4921df63f16760f75a3a0741dc1b33801bcb8820dfe7ff0f4b705f9a4b31dab&=&format=webp&quality=lossless&width=1214&height=235" alt="" style="width: 400px;height: 70px;">
+            <img src="footer_1.webp" alt="" style="width: 400px;height: 70px;">
         </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
